--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -542,13 +542,13 @@ FooterOffCommand=
 ShowHelp=true
 HelpX=SCREEN_CENTER_X
 HelpY=SCREEN_BOTTOM-16
-HelpOnCommand=SetSecsBetweenSwitches,4;shadowlength,1;strokecolor,Color("Black");draworder,105;zoomy,0;linear,0.175;zoom,1*0.675;maxwidth,(640*0.75)/0.5;
+HelpOnCommand=SetSecsBetweenSwitches,4;zoom,0.675;maxwidth,480/0.675;shadowlength,1;strokecolor,Color("Black");draworder,105;zoomy,0;zoom,1*0.675;linear,0.175
 HelpOffCommand=linear,0.175;zoomy,0
 
 AlternateHelpDisplayX=SCREEN_CENTER_X
 AlternateHelpDisplayY=SCREEN_BOTTOM-16
 # AlternateHelpDisplayOnCommand=draworder,105;
-AlternateHelpDisplayOnCommand=SetSecsBetweenSwitches,4;shadowlength,1;strokecolor,Color("Black");draworder,105;zoomy,0;linear,0.175;zoom,1*0.675;maxwidth,(640*0.75)/0.5;;diffusealpha,0
+AlternateHelpDisplayOnCommand=SetSecsBetweenSwitches,4;zoom,0.675;maxwidth,480/0.675;shadowlength,1;strokecolor,Color("Black");draworder,105;zoomy,0;linear,0.175;zoom,1*0.675;diffusealpha,0
 AlternateHelpDisplayOffCommand=linear,0.175;zoomy,0
 
 TimerX=SCREEN_RIGHT-36-4
@@ -836,14 +836,14 @@ SelectMenuAvailable=true
 # ModeMenuAvailable=(getenv(sMode) == Normal)
 # HelpDisplay has things added here to make sure it disappears for another 
 # actor, which we defined in this screens decorations.
-HelpSelectMenuOpenedMessageCommand=basezoom,0.75;finishtweening;zoom,1;bouncebegin,0.25;diffusealpha,0;zoom,0.75
-HelpSelectMenuClosedMessageCommand=basezoom,0.75;finishtweening;zoom,1.25;bounceend,0.125;diffusealpha,1;zoom,1
+HelpSelectMenuOpenedMessageCommand=stoptweening;maxwidth,480/0.675;zoom,0.675;accelerate,0.125;diffusealpha,0;zoom,0.675*0.75;
+HelpSelectMenuClosedMessageCommand=stoptweening;maxwidth,480/0.675;zoom,0.675*0.75;bouncebegin,0.125;diffusealpha,1;zoom,0.675
 # Clone everything from HelpDisplay: we're lazy
 ShowAlternateHelpDisplay=true
 # AlternateHelpDisplaySelectMenuOpenedMessageCommand=stoptweening;y,SCREEN_BOTTOM-16;accelerate,0.0725/2;y,SCREEN_BOTTOM-16-16;diffusealpha,1;decelerate,0.0725/2;y,SCREEN_BOTTOM-16-32;
 # AlternateHelpDisplaySelectMenuClosedMessageCommand=stoptweening;y,SCREEN_BOTTOM-16;smooth,0.125;y,SCREEN_BOTTOM-16;diffusealpha,0;
-AlternateHelpDisplaySelectMenuOpenedMessageCommand=basezoom,0.75;finishtweening;zoom,1;bouncebegin,0.125;diffusealpha,1;zoom,1
-AlternateHelpDisplaySelectMenuClosedMessageCommand=basezoom,0.75;finishtweening;zoom,1;bounceend,0.25;diffusealpha,0;zoom,0.75
+AlternateHelpDisplaySelectMenuOpenedMessageCommand=stoptweening;maxwidth,480/0.675;zoom,0.675*1.25;bounceend,0.2;diffusealpha,1;zoom,0.675;
+AlternateHelpDisplaySelectMenuClosedMessageCommand=stoptweening;maxwidth,480/0.675;zoom,0.675;accelerate,0.125;diffusealpha,0;zoom,0.675*0.75;
 #
 MusicWheelX=SCREEN_CENTER_X+160
 MusicWheelY=SCREEN_CENTER_Y
