put ScreenSelectStyle before ScreenProfileLoad if AutoSetStyle is off

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1740,7 +1740,7 @@ CodeDownRight="DownRight"
 # (formerly known as ScreenSelectPlayMode before sm-ssc v1.0 beta 3)
 Class="ScreenSelectMaster"
 Fallback="ScreenSelectMaster"
-NextScreen=Branch.AfterSelectPlayMode()
+NextScreen=Branch.AfterSelectStyle()
 PrevScreen=Branch.TitleMenu()
 TimerSeconds=40
 #
@@ -1748,18 +1748,18 @@ DefaultChoice="Single"
 ChoiceNames=GameCompatibleModes()
 #
 OptionOrderAuto="1:2,2:1"
-ChoiceSingle="name,Single;style,single;text,Single;screen,"..Branch.AfterSelectPlayMode()
-ChoiceDouble="name,Double;style,double;text,Double;screen,"..Branch.AfterSelectPlayMode()
-ChoiceSolo="name,Solo;style,solo;text,Solo;screen,"..Branch.AfterSelectPlayMode()
-ChoiceVersus="name,Versus;style,versus;text,Versus;screen,"..Branch.AfterSelectPlayMode()
-ChoiceCouple="name,Couple;style,couple;text,Couple;screen,"..Branch.AfterSelectPlayMode()
-ChoiceRoutine="name,Routine;style,routine;text,Routine;screen,"..Branch.AfterSelectPlayMode()
-ChoiceHalfDouble="name,HalfDouble;style,halfdouble;text,HalfDouble;screen,"..Branch.AfterSelectPlayMode()
-Choice5Keys="name,5Keys;style,single5;text,5Keys;screen,"..Branch.AfterSelectPlayMode()
-Choice7Keys="name,7Keys;style,single7;text,7Keys;screen,"..Branch.AfterSelectPlayMode()
-Choice10Keys="name,10Keys;style,double10;text,10Keys;screen,"..Branch.AfterSelectPlayMode()
-Choice14Keys="name,14Keys;style,double14;text,14Keys;screen,"..Branch.AfterSelectPlayMode()
-ChoiceKB7="name,kb7;style,single;screen,"..Branch.AfterSelectPlayMode()
+ChoiceSingle="name,Single;style,single;text,Single;screen,"..Branch.AfterSelectStyle()
+ChoiceDouble="name,Double;style,double;text,Double;screen,"..Branch.AfterSelectStyle()
+ChoiceSolo="name,Solo;style,solo;text,Solo;screen,"..Branch.AfterSelectStyle()
+ChoiceVersus="name,Versus;style,versus;text,Versus;screen,"..Branch.AfterSelectStyle()
+ChoiceCouple="name,Couple;style,couple;text,Couple;screen,"..Branch.AfterSelectStyle()
+ChoiceRoutine="name,Routine;style,routine;text,Routine;screen,"..Branch.AfterSelectStyle()
+ChoiceHalfDouble="name,HalfDouble;style,halfdouble;text,HalfDouble;screen,"..Branch.AfterSelectStyle()
+Choice5Keys="name,5Keys;style,single5;text,5Keys;screen,"..Branch.AfterSelectStyle()
+Choice7Keys="name,7Keys;style,single7;text,7Keys;screen,"..Branch.AfterSelectStyle()
+Choice10Keys="name,10Keys;style,double10;text,10Keys;screen,"..Branch.AfterSelectStyle()
+Choice14Keys="name,14Keys;style,double14;text,14Keys;screen,"..Branch.AfterSelectStyle()
+ChoiceKB7="name,kb7;style,single;screen,"..Branch.AfterSelectStyle()
 #
 PerChoiceScrollElement=false
 PerChoiceIconElement=false
