FancyUIBG was unselectable, fix that

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1251,7 +1251,7 @@ LineRollCombo="lua,UserPrefComboOnRolls()"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
-LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter",FancyUIBG
+LineNames="gNotePos,gAuto,gScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter,FancyUIBG"
 LinegNotePos="lua,UserPrefNotePosition()"
 LinegScore="lua,UserPrefGameplayShowScore()"
 LinegSDisp="lua,UserPrefGameplayShowStepsDisplay()"
