fix some theme issues

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -325,10 +325,10 @@ TextOffCommand=
 FrameOnCommand=visible,false;spin
 #
 TimeRemainingY=80
-TimeRemainingOnCommand=zoom,1;shadowlength,1;settext,"Hi!";
+TimeRemainingOnCommand=zoom,1;shadowlength,1;
 #
-DeltaSecondsOnCommand=y,80;settext,Hi;spin;
-DeltaSecondsGainLifeCommand=zoom,0.5;settext,"Hi!";
+DeltaSecondsOnCommand=y,80;spin;
+DeltaSecondsGainLifeCommand=zoom,0.5;
 
 [ScoreDisplayPercentage Percent]
 PercentP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);diffusetopedge,BoostColor(PlayerColor(PLAYER_1),1.5)
