PlayCommand -> playcommand, fixes a warning brought up on the forums

--- a/NoteSkins/dance/Delta/metrics.ini
+++ b/NoteSkins/dance/Delta/metrics.ini
@@ -57,7 +57,7 @@ HeldCommand=diffuse,1.0,1.0,0.7,1;zoom,1;linear,0.2;zoom,0.9;linear,0.1;diffusea
 [HoldGhostArrow]
 HoldingOnCommand=diffusealpha,1;glowshift;effectcolor1,color("1,1,1,0");effectcolor2,color("1,1,1,0.7");effectperiod,0.1
 HoldingOffCommand=diffusealpha,0
-InitCommand=PlayCommand,"HoldingOff";finishtweening
+InitCommand=playcommand,"HoldingOff";finishtweening
 
 [ReceptorArrow]
 InitCommand=effectclock,"beat";diffuseramp;effectcolor1,color("0.8,0.8,0.8,1");effectcolor2,color("1,1,1,1");effecttiming,0.2,0,0.8,0;effectoffset,0.05
