add jukebox to default theme

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -652,7 +652,7 @@ NetworkStatusOffCommand=linear,0.5;cropright,1
 #
 HelpY=SCREEN_BOTTOM-24
 #
-ChoiceNames="GameStart,Options,Edit,Exit"
+ChoiceNames="GameStart,Options,Edit,Jukebox,Exit"
 DefaultChoice="GameStart"
 
 [ScreenQuickSetupOverview]
