add BPMDisplay to ScreenNetSelectMusic, should fix issue 501

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -2012,11 +2012,16 @@ StepsDisplayP2OnCommand=horizalign,right;zoomx,0.0;zoomy,0.0;linear,0.5;zoomy,1.
 StepsDisplayP2OffCommand=linear,0.5;zoomx,0.0;zoomy,0.0
 #====#
 
+ShowBPMDisplay=true
+BPMDisplayX=SCREEN_CENTER_X-160-90+2
+BPMDisplayY=SCREEN_TOP+160+(36/2)+8
+BPMDisplayOnCommand=finishtweening;maxwidth,128;horizalign,left;strokecolor,Color("Outline");addx,320;zoomx,0;decelerate,0.35;addx,-320;zoomx,1
+BPMDisplayOffCommand=bouncebegin,0.15;zoomx,0;
 #--#
 ShowBPMLabel=true
 BPMLabelX=SCREEN_CENTER_X-160-90
-BPMLabelY=SCREEN_CENTER_Y+156
-BPMLabelOnCommand=horizalign,right;zoom,0.75;strokecolor,Color("Outline");addx,-SCREEN_CENTER_X;decelerate,0.35;addx,SCREEN_CENTER_X
+BPMLabelY=SCREEN_TOP+160+(36/2)+6
+BPMLabelOnCommand=addx,-SCREEN_CENTER_X;decelerate,0.35;addx,SCREEN_CENTER_X
 BPMLabelOffCommand=bouncebegin,0.15;zoomx,0;
 
 UsersX=SCREEN_CENTER_X-272
