add Screen Filter to ScreenPlayerOptions

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1275,6 +1275,7 @@ LineFancyUIBG="lua,UserPrefFancyUIBG()"
 
 [ScreenPlayerOptions]
 LineNames=GetDefaultOptionLines()
+LineSF="lua,OptionRowScreenFilter()"
 Line17="lua,OptionRowProTiming()"
 Line18="list,Characters"
 
