loading window changes on Windows

--- a/src/archutils/Win32/WindowsResources.rc
+++ b/src/archutils/Win32/WindowsResources.rc
@@ -43,16 +43,15 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,0,34,332,1
 END
 
-IDD_LOADING_DIALOG DIALOGEX 0, 0, 317, 94
-STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+IDD_LOADING_DIALOG DIALOGEX 0, 0, 320, 94
+STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_VISIBLE
 EXSTYLE WS_EX_APPWINDOW
-CAPTION "Stepmania"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CTEXT           "line1",IDC_STATIC_MESSAGE1,7,43,303,10,SS_NOPREFIX | SS_CENTERIMAGE
     CTEXT           "line2",IDC_STATIC_MESSAGE2,7,52,303,10,SS_NOPREFIX | SS_CENTERIMAGE
     CTEXT           "line3",IDC_STATIC_MESSAGE3,7,61,303,10,SS_NOPREFIX | SS_CENTERIMAGE
-    CONTROL         "",IDC_SPLASH,"Static",SS_BITMAP,0,0,310,25
+    CONTROL         "",IDC_SPLASH,"Static",SS_BITMAP,0,0,316,25
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",0x0,7,73,303,14
 END
 
