updates to Hello World

--- a/Themes/HelloWorld/metrics.ini
+++ b/Themes/HelloWorld/metrics.ini
@@ -109,10 +109,13 @@ ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((itemIndex-(nu
 [GuideBase]
 Class="ScreenSelectMaster"
 Fallback="ScreenSelectMaster"
+PrevScreen="ScreenGuideMain"
 
 ## Metrics
 [GuideMetrics]
 Fallback="GuideBase"
+### Metrics
+### Languages
 
 ## Fonts
 [GuideFonts]
@@ -188,6 +191,7 @@ ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((itemIndex-(nu
 [ReferenceBase]
 Class="ScreenSelectMaster"
 Fallback="ScreenSelectMaster"
+PrevScreen="ScreenReferenceMain"
 
 ## Screens
 [ReferenceScreens]
@@ -272,10 +276,25 @@ Fallback="ReferenceBase"
 ### Trail
 [ReferenceTrail]
 
-### and a ton of missing stuff
+### and a ton of other missing stuff
 
 ################################################################################
 # [tutor] Tutorials are guides to implementing specific things #
+# All tutorial pages aside from ScreenTutorialMain MUST be prefixed with "Tutorial"
+# in order to differentiate them from the core screens.
 [ScreenTutorialMain]
+Class="ScreenSelectMaster"
+Fallback="ScreenSelectMaster"
+PrevScreen="ScreenTitleMenu"
+AllowRepeatingInput=true
+
+# modifying header position
+HeaderY=SCREEN_TOP+72
 
 # todo: figure out what tutorials
+
+# tutorial base screen (you know the drill by now -aj) #
+[TutorialBase]
+Class="ScreenSelectMaster"
+Fallback="ScreenSelectMaster"
+PrevScreen="ScreenTutorialMain"
