add link to lua ref within Hello World's reference section

--- a/Themes/HelloWorld/metrics.ini
+++ b/Themes/HelloWorld/metrics.ini
@@ -171,10 +171,11 @@ AllowRepeatingInput=true
 # modifying header position
 HeaderY=SCREEN_TOP+72
 
-ChoiceNames="Screens,Managers,Classes"
+ChoiceNames="Screens,Managers,Classes,LuaRef"
 ChoiceScreens="name,Screens"
 ChoiceManagers="name,Managers"
 ChoiceClasses="name,Classes"
+ChoiceLuaRef="name,LuaRef;urlnoexit,http://kki.ajworld.net/lua/sm5/Lua.xml"
 DefaultChoice="Screens"
 
 ShowScroller=true
@@ -182,7 +183,7 @@ LoopScroller=false
 PerChoiceScrollElement=false
 
 ScrollerX=SCREEN_CENTER_X
-ScrollerY=SCREEN_CENTER_Y+32
+ScrollerY=SCREEN_CENTER_Y+48
 ScrollerNumItemsToDraw=10
 ScrollerSecondsPerItem=0.1
 ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((itemIndex-(numItems/2))*64) end
