more updates to Hello World, mainly in the readme.

--- a/Themes/HelloWorld/metrics.ini
+++ b/Themes/HelloWorld/metrics.ini
@@ -82,7 +82,8 @@ AllowRepeatingInput=true
 # modifying header position
 HeaderY=SCREEN_TOP+72
 
-ChoiceNames="Metrics,Fonts,Graphics,BGAnims,Sounds,Scripts,Other,NoteSkins,Announcers,Characters"
+ChoiceNames="Beginning,Metrics,Fonts,Graphics,BGAnims,Sounds,Scripts,Other,NoteSkins,Announcers,Characters"
+ChoiceBeginning="name,Beginning"
 ChoiceMetrics="name,Metrics"
 ChoiceFonts="name,Fonts"
 ChoiceGraphics="name,Graphics"
@@ -93,7 +94,7 @@ ChoiceOther="name,Other"
 ChoiceNoteSkins="name,NoteSkins"
 ChoiceAnnouncers="name,Announcers"
 ChoiceCharacters="name,Characters"
-DefaultChoice="Metrics"
+DefaultChoice="Beginning"
 
 ShowScroller=true
 LoopScroller=false
