hide stage display on gameplay during course mode

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1340,7 +1340,7 @@ BPMDisplayY=SCREEN_BOTTOM-16
 BPMDisplayOnCommand=draworder,101
 BPMDisplayOffCommand=bounceend,0.25;zoom,0
 #
-ShowStageDisplay=true
+ShowStageDisplay=not GAMESTATE:IsCourseMode()
 StageDisplayX=SCREEN_CENTER_X
 StageDisplayY=SCREEN_TOP+24
 StageDisplayOnCommand=zoom,0.675;
