[ScreenDebugOverlay] Replaced hardcoded toggle command with ButtonTextToggledCommand metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1355,6 +1355,7 @@ LineButtonX=SCREEN_CENTER_X-50
 LineFunctionX=SCREEN_CENTER_X-30
 
 ButtonTextOnCommand=NoStroke;zoom,0.8
+ButtonTextToggledCommand=accelerate,0.025;glow,color("1,0,0,1");sleep,0.125;decelerate,0.2;glow,color("1,0,0,0");
 FunctionTextOnCommand=NoStroke;zoom,0.8
 
 PageStartX=SCREEN_CENTER_X-100
@@ -1372,8 +1373,6 @@ HeaderTextX=SCREEN_LEFT+80
 HeaderTextY=SCREEN_TOP+18
 HeaderTextOnCommand=diffusebottomedge,color("0.5,0.5,0.5,1");strokecolor,color("0,0,0,0.5")
 HeaderTextOffCommand=
-
-LineOnCommand=zoom,0.75
 #
 
 [ScreenSystemLayer]
