[ScreenEvaluation] Added RollingNumbersMaxComboClass metric. (also removed unused MaxComboNumDigits metric from C++-side)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1085,6 +1085,9 @@ TextFormat="%04.0f"
 ApproachSeconds=1
 Commify=false
 
+[RollingNumbersMaxCombo]
+Fallback="RollingNumbersJudgment"
+
 [ScoreDisplayNormal]
 FrameX=
 FrameY=
@@ -3232,6 +3235,7 @@ MaxComboNumDigits=4
 #
 ShowBannerArea=true
 RollingNumbersClass="RollingNumbersJudgment"
+RollingNumbersMaxComboClass="RollingNumbersMaxCombo"
 #
 ShowSharedJudgmentLineLabels=false
 ShowJudgmentLineW1=false
