--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4131,11 +4131,13 @@ BodyHeight=38
 [ComboGraph]
 BodyWidth=140
 
-# Arcade
+# Arcade #################################
 [ScreenLogo]
 Fallback="ScreenAttract"
 PrevScreen=Branch.Init()
-NextScreen="ScreenHowToPlay"
+# crashes!
+#NextScreen="ScreenHowToPlay"
+NextScreen="ScreenDemonstration"
 StartScreen=Branch.TitleMenu()
 TimerSeconds=5
 ForceTimer=true
@@ -4179,19 +4181,10 @@ SongBPM=100
 NumW2s=4
 NumMisses=6
 
-[ScreenTitleJoin]
-Fallback="ScreenTitleMenu"
-ChoiceNames="GameStart"
-
-# ScrollerOnCommand=visible,false
-IdleCommentSeconds=-1
-IdleTimeoutSeconds=-1
-IdleTimeoutScreen=Branch.AfterInit()
-
 [ScreenDemonstration]
 Fallback="ScreenGameplay"
 Class="ScreenDemonstration"
-NextScreen="ScreenInit"
+NextScreen=Branch.NoiseTrigger()
 StartScreen=Branch.TitleMenu()
 PlayMusic=false
 SecondsToShow=60
@@ -4205,6 +4198,24 @@ AllowStyleTypes="TwoPlayersTwoSides"
 MinSecondsToStep=0
 MinSecondsToMusic=0
 
+[ScreenNoise]
+Fallback="ScreenAttract"
+Class="ScreenAttract"
+NextScreen="ScreenInit"
+PrevScreen="ScreenInit"
+TimerSeconds=10800
+ShowCreditDisplay=false
+
+[ScreenTitleJoin]
+Fallback="ScreenTitleMenu"
+ChoiceNames="GameStart"
+
+# ScrollerOnCommand=visible,false
+IdleCommentSeconds=-1
+IdleTimeoutSeconds=-1
+IdleTimeoutScreen=Branch.AfterInit()
+
+# Jukebox ###################
 [ScreenJukeboxMenu]
 Class="ScreenOptionsMaster"
 Fallback="ScreenPlayerOptions"
