These windows builds...well, hopefully are good.

--- a/src/StepMania-net2010.vcxproj
+++ b/src/StepMania-net2010.vcxproj
@@ -762,14 +762,14 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
     <ClCompile Include="RageUtil_CharConversions.cpp" />
     <ClCompile Include="RageUtil_FileDB.cpp" />
     <ClCompile Include="RageUtil_WorkerThread.cpp" />
-    <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="ActorFrame.cpp" />
-    <ClCompile Include="ActorFrameTexture.cpp" />
-    <ClCompile Include="ActorMultiTexture.cpp" />
-    <ClCompile Include="ActorProxy.cpp" />
-    <ClCompile Include="ActorScroller.cpp" />
-    <ClCompile Include="ActorSound.cpp" />
-    <ClCompile Include="ActorUtil.cpp" />
+    <ClCompile Include="Actors\Actor.cpp" />
+    <ClCompile Include="Actors\ActorFrame.cpp" />
+    <ClCompile Include="Actors\ActorFrameTexture.cpp" />
+    <ClCompile Include="Actors\ActorMultiTexture.cpp" />
+    <ClCompile Include="Actors\ActorProxy.cpp" />
+    <ClCompile Include="Actors\ActorScroller.cpp" />
+    <ClCompile Include="Actors\ActorSound.cpp" />
+    <ClCompile Include="Actors\ActorUtil.cpp" />
     <ClCompile Include="AutoActor.cpp" />
     <ClCompile Include="BitmapText.cpp" />
     <ClCompile Include="DynamicActorScroller.cpp" />
@@ -2084,13 +2084,13 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
     <ClInclude Include="RageUtil_CircularBuffer.h" />
     <ClInclude Include="RageUtil_FileDB.h" />
     <ClInclude Include="RageUtil_WorkerThread.h" />
-    <ClInclude Include="Actor.h" />
-    <ClInclude Include="ActorFrame.h" />
-    <ClInclude Include="ActorFrameTexture.h" />
-    <ClInclude Include="ActorMultiTexture.h" />
-    <ClInclude Include="ActorProxy.h" />
-    <ClInclude Include="ActorScroller.h" />
-    <ClInclude Include="ActorSound.h" />
+    <ClInclude Include="Actors\Actor.h" />
+    <ClInclude Include="Actors\ActorFrame.h" />
+    <ClInclude Include="Actors\ActorFrameTexture.h" />
+    <ClInclude Include="Actors\ActorMultiTexture.h" />
+    <ClInclude Include="Actors\ActorProxy.h" />
+    <ClInclude Include="Actors\ActorScroller.h" />
+    <ClInclude Include="Actors\ActorSound.h" />
     <ClInclude Include="ActorUtil.h" />
     <ClInclude Include="AutoActor.h" />
     <ClInclude Include="BitmapText.h" />
