fix crash on ScreenRanking

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2918,7 +2918,7 @@ PageFadeSeconds=1.0
 CoursesToShow=GetCoursesToShowRanking()
 SecondsPerPage=5
 #
-RankingType="Category"
+RankingType="RankingType_Category"
 #
 RowSpacingX=0
 RowSpacingY=60
