why was this never added in the first place? seriously.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3460,10 +3460,11 @@ Fallback="ScreenOptionsSimpleService"
 NextScreen=Branch.TitleMenu()
 PrevScreen=Branch.TitleMenu()
 
-LineNames="1,2,3"
+LineNames="1,2,3,4"
 Line1="gamecommand;screen,ScreenEditMenu;name,Edit Songs/Steps"
 Line2="gamecommand;screen,ScreenPracticeMenu;name,Practice Songs/Steps"
-Line3="gamecommand;screen,ScreenOptionsExportPackage;name,Export Packages"
+Line3="gamecommand;screen,ScreenEditCourseModsMenu;name,Edit Courses/Mods"
+Line4="gamecommand;screen,ScreenOptionsExportPackage;name,Export Packages"
 
 # broken:
 # Line4="gamecommand;screen,ScreenOptionsManageCourses;name,Edit Courses"
@@ -3668,6 +3669,24 @@ Class="ScreenEdit"
 NextScreen="ScreenOptionsEdit"
 PrevScreen="ScreenOptionsEdit"
 EditMode="EditMode_Practice"
+
+[ScreenEditCourseModsMenu]
+Fallback="ScreenEditMenu"
+Class="ScreenEditMenu"
+NextScreen="ScreenEditCourseMods"
+PrevScreen="ScreenOptionsEdit"
+EditMenuType="CourseModsMenu"
+
+[CourseModsMenu]
+Fallback="EditMenu"
+EditMode="EditMode_Full"
+
+[ScreenEditCourseMods]
+Fallback="ScreenEdit"
+Class="ScreenEdit"
+NextScreen="ScreenOptionsEdit"
+PrevScreen="ScreenOptionsEdit"
+EditMode="EditMode_CourseMods"
 
 [ScreenEditOptions]
 Fallback="ScreenOptions"
