small fix regarding holds to rolls on player options

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2264,7 +2264,7 @@ Scroll,5="mod,centered;name,Centered"
 # Scroll,5="mod,cross;name,Cross"
 
 Holds="4;selectmultiple"
-HoldsDefault="mod,no noholds,no planted,no twister,no holdstorolls"
+HoldsDefault="mod,no noholds,no planted,no twister,no holdrolls"
 Holds,1="mod,noholds;name,NoHolds"
 Holds,2="mod,planted;name,Planted"
 Holds,3="mod,twister;name,Twister"
