--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2216,7 +2216,7 @@ Turn,6="mod,softshuffle;name,SoftShuffle"
 # Turn,6="mod,supershuffle;name,SuperShuffle"
 
 Insert="7;selectmultiple"
-InsertDefault="mod,no wide,no big,no quick,no skippy,no echo,no stomp"
+InsertDefault="mod,no wide,no big,no quick,no skippy,no echo,no stomp,no bmrize"
 Insert,1="mod,wide;name,Wide"
 Insert,2="mod,big;name,Big"
 Insert,3="mod,quick;name,Quick"
